# ysos_libs_as81

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/yunshen/ysos_libs_as81/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/json/: CMakeLists.txt
app/src/main/cpp/tinyxml2/: CMakeLists.txt
app/src/main/java/com/yunshen/ysos_libs_as81/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/yunshen/ysos_libs_as81/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
